--- a/package.xml
+++ b/package.xml
@@ -51,6 +51,7 @@
   <build_depend>tf</build_depend>
   <build_depend>tf_conversion</build_depend>
   <build_depend>cmake_modules</build_depend>
+  <build_depend>apriltags_ros</build_depend>
   <run_depend>sensor_msgs</run_depend>
   <run_depend>image_transport</run_depend>
   <run_depend>rospy</run_depend>
@@ -63,6 +64,7 @@
   <run_depend>tf_conversion</run_depend>
   <run_depend>cmake_modules</run_depend>
   <run_depend>visualization_msgs</run_depend>
+  <run_depend>apriltags_ros</run_depend>
 
 
   <!-- The export tag contains other, unspecified, tags -->
