--- a/params/slam_params.yaml
+++ b/params/slam_params.yaml
@@ -20,3 +20,30 @@ odom_rot_stddev: 5
 land_obs_trans_stddev: 0.02
 # Standard deviation of the rotation components of the landmark observations [deg]
 land_obs_rot_stddev: 1
+
+# Laser Scan Matcher Node Parameters
+use_vel: true
+use_odom: false
+use_imu: true
+publish_tf: false
+publish_pose_stamped: true
+
+max_iterations: 10
+max_correspondence_dist: 0.3
+max_max_angular_correction_deg: 45.0
+max_linear_correction: 0.5
+epsilon_xy: 0.000001
+epsilon_theta: 0.000001
+outliers_maxPerc: 0.94
+restart: 0
+
+# Laser Scan Odometry Parameters
+# Boolean for whether to try to overwrite laser_scan_matcher pose estimates
+use_pose_correction: false
+# If we will be overwriting pose estimates, these parameters scale the
+# pose deltas obtained from the commanded velocity
+linear_scaling_correction: 1.0
+angular_scaling_correction: 1.0
+# pose estimate corrections should only be made if our calculated
+# pose delta is above a noise threshold
+noise_threshold_correction: 0.01
