--- a/params/ros_params.yaml
+++ b/params/ros_params.yaml
@@ -27,3 +27,9 @@ est_robot_queue_size: 1
 odom_meas_topic: odom_meas_topic
 # Queue size for Odometry Measurements
 odom_meas_queue_size: 1
+
+# Parameters for the robot's odometry calculation (deltaOdomCalc.py)
+# distance between poses to get a delta calculation [m]
+robot_odom_distance_threshold: 0.2 
+# angle difference trigger between poses to get a delta calculation [deg]
+robot_odom_yaw_threshold: 5
