--- a/params/ros_params.yaml
+++ b/params/ros_params.yaml
@@ -32,6 +32,10 @@ odom_meas_topic: odom_meas_topic
 # Queue size for Odometry Measurements
 odom_meas_queue_size: 1
 
+odom_meas_global_topic: odom_meas_global_topic
+# Queue size for Global Odometry Measurements
+odom_meas_global_queue_size: 1
+
 # Parameters for the robot's odometry calculation (deltaOdomCalc.py)
 # distance between poses to get a delta calculation [m]
 robot_odom_distance_threshold: 0.2 
